--- a/app.json
+++ b/app.json
@@ -10,26 +10,26 @@
 
     "Vless_UUID": {
       "description": "Vless uuid（http://www.uuid.online/在线生成）",
-      "value": "5c301bb8-6c77-41a0-a606-4ba11bbab084"
+      "value": "f44905fd-749b-409c-ab5d-bee96f97f11e"
     },
 
     "Vless_Path": {
       "description": "Path路径，默认/s233,为了安全你也可以使用uuid替换s233，/不能少。如果开启反代，不要与反代网站存在的uri相同",
-      "value": "/s233"
+      "value": "/f44905fd-749b-409c-ab5d-bee96f97f11e"
     },
     "Vmess_UUID": {
       "description": "Vmess uuid（http://www.uuid.online/在线生成）",
-      "value": "5c301bb8-6c77-41a0-a606-4ba11bbab084"
+      "value": "f44905fd-749b-409c-ab5d-bee96f97f11e"
     },
 
     "Vmess_Path": {
       "description": "Path路径，默认/s244,为了安全你也可以使用uuid替换s244，/不能少。如果开启反代，不要与反代网站存在的uri相同",
-      "value": "/s244"
+      "value": "/f44905fd-749b-409c-ab5d-bee96f97f11e"
     },
     
     "Share_Path": {
-      "description": "Share path, /share233/index.html查看订阅链接及二维码",
-      "value": "/share233"
+      "description": "Share path, /seaky/index.html查看订阅链接及二维码",
+      "value": "/seaky"
     },
 
     "VER": {
